Update the SecurityConfig to add new environment variables to clean deploy and finally remove unusable documentation